[ARGU-1028] Fix z-index of sticky buttons. They shouldn’t always be on top.

--- a/app/assets/stylesheets/briarcliff/_button.scss
+++ b/app/assets/stylesheets/briarcliff/_button.scss
@@ -150,6 +150,9 @@
 
 .sticky, .sticky--bottom-right, .sticky--center, .sticky--top-left, .sticky--top-right {
   position: absolute !important;
+}
+
+.sticky--on-top {
   z-index: 1;
 }
 
